# ImmersiveReader

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  IMMERSIVE-READER-CODE-AUDIT-TODO-2026-07-15.md  README.md  V3-TODO.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: reader_qa.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/miri-harness/: Cargo.toml
apps/desktop/src-tauri/miri-harness/src/: lib.rs
apps/desktop/src-tauri/src/: atomic_file.rs  cache.rs  contracts.rs  control.rs  importer.rs  job_object.rs  lib.rs  library.rs  main.rs  migration.rs  podcast.rs  progress.rs  publish.rs  reader_http.rs  reader_preferences.rs  reader_server.rs  secrets.rs  settings.rs  storage.rs  tasks.rs  temporary_content.rs  tools.rs  trash.rs  zhihu.rs
apps/desktop/src-tauri/src/cache/: safe_cleanup.rs
apps/desktop/src-tauri/src/control/: tests.rs
apps/desktop/src-tauri/src/migration/: execution.rs  execution_tests.rs  preview.rs  preview_tests.rs  reconciliation.rs  reconciliation_tests.rs  sqlite.rs  sqlite_tests.rs
apps/desktop/src-tauri/src/podcast/: publish.rs  task_contract.rs  task_request.rs  tasks.rs  worker.rs
apps/desktop/src-tauri/src/publish/: tests.rs  transaction.rs  validation.rs
apps/desktop/src-tauri/src/settings/: channel.rs  recovery.rs
apps/desktop/src-tauri/src/storage/: path_guard.rs
apps/desktop/src-tauri/src/tools/: launcher.rs  ready.rs  sidecar_http.rs  tool_manager.rs
scripts/: start.ps1  (+10 more)
(+187 files in other folders)
