[package]
name = "immersive-reader"
version = "1.0.0"
description = "A local-first immersive reading library"
authors = ["you"]
edition = "2021"

[lib]
name = "immersive_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
encoding_rs = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tiny_http = "0.12"
percent-encoding = "2"
rusqlite = { version = "=0.39.0", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Credentials", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Threading"] }
